--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aos": "^2.3.4",
+    "axios": "^0.19.2",
+    "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-page-scroller": "^2.0.3-beta",
     "react-particles-js": "^2.7.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "^3.3.0",
+    "react-typed": "^1.2.0",
+    "redux": "^4.0.5",
     "scrollmagic": "^2.0.7"
   },
   "scripts": {
