--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "aos": "^2.3.4",
     "axios": "^0.19.2",
+    "hamburgers": "^1.1.3",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
