--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "aos": "^2.3.4",
     "axios": "^0.19.2",
     "hamburgers": "^1.1.3",
-    "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-page-scroller": "^2.0.3-beta",
     "react-particles-js": "^2.7.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-typed": "^1.2.0",
     "redux": "^4.0.5",
