--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-scripts": "^3.3.0",
     "react-typed": "^1.2.0",
     "redux": "^4.0.5",
-    "scrollmagic": "^2.0.7"
+    "scrollmagic": "^2.0.7",
+    "sweetalert2": "^9.10.11",
+    "sweetalert2-react-content": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
